# parser-project

./: pyproject.toml
modules/: 1_get_agency.py  1_get_listings.py  2_get_info.py  2_get_member_info.py  load_django.py
results/: parser_app_agency_202504092012.csv  parser_app_agencyresult_202504092012.csv  parser_app_member_202504091356.csv  parser_app_member_202504092013.csv  parser_app_result_202504092013.csv
wsba_parser/: manage.py
wsba_parser/modules/: 1_get_listings.py  2_get_info.py  load_django.py
wsba_parser/parser_app/: admin.py  models.py  views.py
wsba_parser/parser_app/migrations/: 0001_initial.py  0002_alter_member_fax_alter_member_is_has_insurance_and_more.py  0003_alter_member_email_alter_member_is_has_insurance_and_more.py  0004_alter_member_fax_alter_member_is_has_insurance_and_more.py  0005_remove_result_name_result_status.py  0006_alter_member_is_has_insurance_and_more.py  0007_alter_member_is_has_insurance_and_more.py  0008_alter_member_is_has_insurance_and_more.py  0009_alter_member_is_has_insurance_and_more.py  0010_alter_member_is_has_insurance_and_more.py  0011_alter_member_is_has_insurance_and_more.py  0012_agency_agencyresult_member_admit_date_and_more.py  0013_alter_member_volunteer_service_history.py  0014_member_firm_or_employer_member_has_ever_was_as_judge_and_more.py  0015_remove_agency_objects_to_rent_and_more.py  0016_rename_link_agency_logo.py  0017_delete_agency_delete_agencyresult.py  0018_alter_member_eligible_to_practice_and_more.py  (+1 more)
wsba_parser/wsba_parser/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
