[tool.poetry]
name = "parser-project"
version = "0.1.0"
description = ""
authors = ["Alexander Ivanitskiy <negalapetrovna77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2 = "^2.9.10"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
